<resources>
    <string name="app_name">What\'s Going On???</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">or</string>
    <string name="reg_link">No account? Sign up <b>here!</b></string>
    <string name="create_acc">Create new account</string>
    <string name="rep_pass">Repeat password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in_link">Already have an account? <b>Log in!</b></string>
    <string name="event_name">Event name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="create_event">Create event</string>
    <string name="please_log_in">Please log in</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Log in</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="hint_password_again">Confirm password</string>
    <string name="hint_email">Email</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="progress_dialog_title_login">Login</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_invalid_credential">Invalid credentials. Please try it again.</string>
    <string name="error_user_exits">This user already exists. Please choose different name.</string>
    <string name="error_no_user">This user doesn\'t exist.</string>
    <string name="occur_error">Error has been occured.</string>
    <string name="error">Error!</string>
    <string name="progress_dialog_wait">Please wait...</string>
    <string name="progress_dialog_title_signup">Sign up</string>
    <string name="invalid_password_format">Password must be at least 6 characters long</string>
    <string name="login_title">Wanna login???</string>
    <string name="choose_photo">Choose photo</string>
    <string name="chat_item">Chat</string>
    <string name="profile_item">My profile</string>
    <string name="events_item">Events</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="help">Help</string>
    <string name="header_email">Your email</string>
    <string name="header_name">Your name</string>
    <string name="facebook_app_id">753013854886290</string>
    <string name="unsuccessful_login">Login wasn\'t successful.</string>
    <string name="settings_change_user_info">User profile info</string>
    <string name="settings_notifications">Notifications</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_photo">Profile photo</string>
    <string name="settings_allow_sound_notifications">Turn on sound notifications</string>
    <string name="settings_event_reminder">Turn on event reminder</string>
    <string name="settings_notification_vibrate">Turn on vibrate</string>
    <string name="settings_notification_ringtone">Choose sounds</string>
    <string name="settings_reminder_summary">Reminds you about upcoming events</string>
    <string name="settings_notifications_summary">When you get a new message, we will let you know </string>
    <string name="prompt_enter_photo">Please choose a new profile photo</string>
    <string name="prompt_enter_password">We will send you an email to change your old password</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
    <string name="web_client_id">350683107593-o0f11033mp22vlbjqh5oepdu9014hq5d.apps.googleusercontent.com</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="user_profile_preferences">user_profile_preferences</string>

    <string name="hint_user_info">Info about you</string>
    <string name="hint_nationality">Nationality</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_university">School</string>
    <string name="hint_work">Work</string>
    <string name="hint_birthday">Birthday</string>
    <string name="message_hint">Enter your message</string>
    <string name="hint_eventname">Name</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="hint_description">Description</string>
    <string name="hint_event_place">Place</string>
    <string name="hint_enter_message">Enter your message</string>
    <string name="hint_city">City</string>

    <string name="reset_password_instructions_sent">The email for resetting the old password has been sent</string>
    <string name="reset_password_instructions_not_sent">The email for resetting the old password has not been sent</string>
    <string name="profile_photo_updated">The profile photo has been updated</string>
    <string name="success_signup">Sign up has been successful</string>
    <string name="gender">Gender</string>
    <string name="title_activity_my_profile">My profile</string>
    <string name="no_channels_found">No channels found… Swipe to refresh</string>
    <string name="select_participants">Select participants</string>
    <string name="create_group">Create group</string>
    <string name="cancel">Cancel</string>
    <string name="group_name">Group name</string>
    <string name="no_group_name">Add name for the group</string>
    <string name="group_too_small">Group needs at least 3 members</string>
    <string name="pick_group_photo">Pick group photo</string>
    <string name="add_members">Add members</string>
    <string name="leave_group">Leave group</string>
    <string name="leave_group_question">Do you really want to leave this group?</string>
    <string name="no_new_group_member_selected">No new member selected</string>
    <string name="send_message">Send</string>
    <string name="btn_add_event">Add event</string>
    <string name="new_event_label">New event</string>
    <string name="yesterday_sent">Yesterday at</string>
    <string name="error_date_past">Date has to be in the future</string>
    <string name="error_time_past">Time has to be in the future</string>
    <string name="message_saved_event">New event has been created</string>
    <string name="edit_event">Save changes</string>
    <string name="delete_event">Delete event</string>
    <string name="success_message_deleted_event">Event has been deleted</string>
    <string name="success_message_edit_event">Event has been updated</string>
    <string name="synchronize_events">Synchronize with my calendars</string>
    <string name="join_event">Join event</string>
    <string name="leave_event">Leave event</string>
    <string name="message_join_event">You have joined the event</string>
    <string name="message_leave_event">You have left the event</string>
    <string name="group_deleted">Group has been deleted due to too few members…</string>
    <string name="downloading_data">Downloading data…</string>
    <string name="show_profile">Show profile</string>
    <string name="calendar_type">Select calendar</string>
    <string name="share">Share</string>
    <string name="choose_participants">Share event to</string>
    <string name="search">Search</string>
    <string name="no_results">No results</string>
    <string name="reminder_hours_summary">Choose how many hours before you should be reminded</string>
    <string name="reminder_hours_title">Hours before the event</string>
    <string name="choose_hours">Choose hours</string>
    <string name="hours_before_event_title">Hours before the event</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="check_it_out">Check it out</string>
    <string name="btn_share_event">Share event</string>
    <string name="succes_message_shared_event">Event has been shared</string>
    <string name="event_processing">Event is being processed</string>
    <string name="sent_picture">Picture</string>
    <string name="shared_event">Event</string>
    <string name="synchronized_event">Event has been synchronized</string>
    <string name="enter_email">Enter email</string>
    >>>>>>> eee39547052e2b11e830d48c613c3446c910b591

</resources>
