<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceCategory android:title="@string/settings_change_user_info">

        <Preference
            android:inputType="textPassword"
            android:key="password"
            android:password="true"
            android:summary="@string/prompt_enter_password"
            android:title="@string/prompt_password" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_notifications">
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_message"
            android:summary="@string/settings_notifications_summary"
            android:title="@string/settings_allow_sound_notifications" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="notification_vibrate"
            android:title="@string/settings_notification_vibrate" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="notification_reminders"
            android:summary="@string/settings_reminder_summary"
            android:title="@string/settings_event_reminder" />
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:key="notification_ringtone"
            android:ringtoneType="notification"
            android:title="@string/settings_notification_ringtone" />
    </PreferenceCategory>

</PreferenceScreen>