<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/login_title"
        android:textSize="@dimen/font_size_medium"
        android:textAppearance="?android:textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <!-- Email -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="@dimen/spacing_small"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:drawablePadding="@dimen/spacing_small"
                android:drawableStart="@drawable/ic_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/ButtonStyle"
            android:background="@color/colorPrimary"
            android:text="@string/btn_login" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/or"
            android:textStyle="bold" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_facebook"
            style="@style/ButtonStyle"
            android:background="@color/colorFacebook"
            android:drawableStart="@drawable/ic_facebook"
            android:text="@string/facebook" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_google"
            style="@style/ButtonStyle"
            android:background="@color/colorGoogle"
            android:drawableStart="@drawable/ic_google_plus"
            android:text="@string/google" />


    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/reg_link"
        android:layout_gravity="left"
        android:gravity="left"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/forgotten_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/forgotten_password"
            android:layout_gravity="right"
            android:gravity="right"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>