<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <!-- Event name -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_eventname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_eventname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_event_name"
                android:drawablePadding="@dimen/spacing_small"
                android:descendantFocusability="blocksDescendants"
                android:hint="@string/hint_eventname" />
        </android.support.design.widget.TextInputLayout>

        <!-- Event place -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_eventplace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_eventplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_place"
                android:descendantFocusability="blocksDescendants"
                android:drawablePadding="@dimen/spacing_small"
                android:hint="@string/hint_event_place" />
        </android.support.design.widget.TextInputLayout>

        <!-- Date -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:drawableLeft="@drawable/ic_events"
                android:drawablePadding="@dimen/spacing_small"
                android:descendantFocusability="blocksDescendants"
                android:hint="@string/hint_date" />
        </android.support.design.widget.TextInputLayout>

        <!-- Time Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_time"
                android:drawablePadding="@dimen/spacing_small"
                android:hint="@string/hint_time"
                android:focusableInTouchMode="false"
                android:clickable="true"
                android:inputType="time" />
        </android.support.design.widget.TextInputLayout>

        <!-- Description -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_add_event"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:background="@color/colorAccent"
                android:text="@string/create_event" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_edit_event"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:background="@color/colorAccent"
                android:text="@string/edit_event"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_delete_event"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@color/colorAccent"
                android:text="@string/delete_event"
                android:visibility="gone" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_join_event"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@color/colorAccent"
                android:text="@string/join_event"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_synchronize"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@color/colorAccent"
                android:text="@string/synchronize_events" />


        </LinearLayout>


    </LinearLayout>
</ScrollView>