<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_group_dialog_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/group_name"/>

    <Button
        android:id="@+id/btn_pick_group_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_group_dialog_group_name"
        android:text="@string/pick_group_photo"
        android:background="@color/colorPrimary" />

    <ListView
        android:id="@+id/lw_group_dialog_options_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_pick_group_photo"
        android:layout_above="@+id/ll_group_dialog_buttons"/>

    <LinearLayout
        android:id="@+id/ll_group_dialog_buttons"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/btn_pick_participants_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/create_group"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_marginEnd="1dp"/>

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/btn_pick_participants_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_marginStart="1dp"/>
    </LinearLayout>

</RelativeLayout>